[gd_scene load_steps=5 format=3 uid="uid://b8vbosqfr4k"]

[ext_resource type="Theme" uid="uid://csxyvlp48nu33" path="res://ui/ui_theme.tres" id="1_ehkof"]
[ext_resource type="Script" path="res://ui/win_screen/win_screen.gd" id="1_h3boa"]

[sub_resource type="Theme" id="Theme_s3s0k"]
default_font_size = 32

[sub_resource type="Theme" id="Theme_0evdr"]
default_font_size = 32

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ehkof")
script = ExtResource("1_h3boa")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -398.0
offset_top = -213.0
offset_right = 398.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.5
offset_top = 42.0
offset_right = 62.5
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = " Wins!!"
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.5
offset_top = -24.5
offset_right = -65.5
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_s3s0k")
theme_override_font_sizes/font_size = 50
text = "Play Again"

[node name="MenuButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 39.0
offset_top = -26.5
offset_right = 221.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_0evdr")
theme_override_font_sizes/font_size = 50
text = "Main Menu"

[node name="WatchReplayButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = 94.0
offset_right = 112.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_s3s0k")
theme_override_font_sizes/font_size = 50
text = "Watch Replay"
